deploy/java-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-java-app
  namespace: notwietse-dev
  annotations:
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"my-java-app:latest","namespace":"notwietse-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]
spec:
  replicas: 0
  selector:
    matchLabels:
      app: my-java-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-java-app
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/notwietse-dev/my-java-app@sha256:42ffc55275a9a6544261c4c01bbd651f1cc77b9bd769d6c2d2f454281fb8039a
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
