deploy/webapp-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: report-webserver
  namespace: notwietse-dev
  uid: b17575db-f210-4fcc-a6dc-a6c788917de0
  resourceVersion: '3435112206'
  generation: 6
  creationTimestamp: '2023-11-23T09:09:41Z'
  annotations:
    deployment.kubernetes.io/revision: '5'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-webserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: report-webserver
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: dependency-security-report
            defaultMode: 420
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: container
          command:
            - nginx
            - '-g'
            - daemon off;
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /opt/app-root/src
          terminationMessagePolicy: File
          image: registry.access.redhat.com/ubi8/nginx-120
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
